# uni-kernel

./: LICENSE.txt  Makefile  README.md  build.initramfs
boot/: bochsrc  grub.cfg
boot2dump/: README.md
boot2dump/rust/: Cargo.toml
boot2dump/rust/src/: lib.rs
exts/virtio_net/: Cargo.toml  lib.rs
kernel/: Cargo.toml  README.md  deferred_job.rs  interrupt.rs  lang_items.rs  logger.rs  main.rs  pipe.rs  poll.rs  result.rs  test_runner.rs  timer.rs  user_buffer.rs
kernel/arch/x64/: mod.rs  process.rs  x64.json
kernel/fs/: initramfs.rs  inode.rs  mount.rs  opened_file.rs  stat.rs  tmpfs.rs
kernel/fs/devfs/: mod.rs  tty.rs
kernel/fs/procfs/: metrics.rs  mod.rs
kernel/mm/: page_fault.rs  vm.rs
kernel/net/: mod.rs  socket.rs  tcp_socket.rs  udp_socket.rs
kernel/process/: elf.rs  init_stack.rs  mod.rs  process.rs  process_group.rs  scheduler.rs  signal.rs  wait_queue.rs
kernel/syscalls/: accept.rs  arch_prctl.rs  bind.rs  brk.rs  clock_gettime.rs  connect.rs  execve.rs  fstat.rs  getcwd.rs  getdents64.rs  getpeername.rs  getrandom.rs  getsockname.rs  getsockopt.rs  lstat.rs  mmap.rs  mod.rs  pipe.rs  poll.rs  read.rs  readlink.rs  reboot.rs  recvfrom.rs  rt_sigaction.rs  rt_sigprocmask.rs  select.rs  sendto.rs  set_tid_address.rs  stat.rs  syslog.rs  uname.rs  utimes.rs  wait4.rs  write.rs  writev.rs
kernel/tty/: line_discipline.rs  mod.rs  pty.rs
libs/log_filter/: Cargo.toml  lib.rs
libs/unikernel_api/: Cargo.toml  kernel_ops.rs  lib.rs
libs/unikernel_api/driver/: mod.rs  pci.rs
libs/unikernel_utils/: Cargo.toml  bump_allocator.rs  bytes_parser.rs  id_table.rs  ring_buffer.rs
libs/virtio/: Cargo.toml  device.rs  lib.rs
libs/virtio/transports/: mod.rs  virtio_mmio.rs  virtio_pci_legacy.rs  virtio_pci_modern.rs
runtime/: Cargo.toml  README.md  address.rs  backtrace.rs  global_allocator.rs  lib.rs  page_allocator.rs  print.rs
runtime/x64/: bootinfo.rs  paging.rs  vga.rs
testing/: Dockerfile
testing/c-code/: Makefile  main.c
testing/etc/: init  test.out
testing/exp-1/: Makefile  main.c
testing/exp-2/: Makefile  main.c
testing/http-server/: main.c
testing/http-server-1/: main.c
testing/integration_tests/: close_pipes_on_exit.test
testing/mem-test/: Makefile  main.c
testing/overwrite/: Makefile  check-stack.c  stack-overwrite-64-2.c
testing/web/: index.html
testing/webserver/: Makefile  main.c
tools/: create-qcow2.sh  run-qemu.py
