[package]
name = "unikernel_kernel"
version = "0.1.0"
authors = ["Dhanush-arch"]
edition = "2021"

[[bin]]
name = "unikernel_kernel"
path = "main.rs"

[dependencies]
log = "0.4"
spin = "0.9.2"
goblin = { version = "0.5", default-features = false, features = ["elf64"] }
smoltcp = { version = "0.7.5", default-features = false, features = ["alloc", "proto-ipv4", "socket", "socket-raw", "socket-udp", "socket-tcp", "proto-dhcpv4", "ethernet"] }
boot2dump = { version = "0" }

# Data structues.
bitflags = "1.3.2"
arrayvec = { version = "0.7.2", default-features = false }
hashbrown = { version = "0.12.0", features = ["nightly"] }
crossbeam = { version = "0.8.1", default-features = false, features = ["alloc"] }
atomic_refcell = "0.1.6"
bitvec = { version = "1.0.0", default-features = false, features = ["atomic", "alloc"] }

# Arch-specific dependencies.
x86 = "0.47.0"

# Local dependencies.
unikernel_runtime = { path = "../runtime" }
unikernel_api = { path = "../libs/unikernel_api" }
unikernel_utils = { path = "../libs/unikernel_utils", features = ["no_std"] }

# Kernel Extensions.
virtio_net = { path = "../exts/virtio_net" }
