[package]
name = "virtio_net"
version = "0.1.0"
authors = [""]
edition = "2021"

[lib]
name = "virtio_net"
path = "lib.rs"

[dependencies]
bitflags = "1.3.2"
memoffset = "0.6.5"

unikernel_api = { path = "../../libs/unikernel_api" }
unikernel_utils = { path = "../../libs/unikernel_utils" }
virtio = { path = "../../libs/virtio" }
